Added csv upload and skeleton graph generation

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-fastapi[all]
+fastapi[all]~=0.109.1
 uvicorn[standard]
 
 pydantic~=2.6.0
@@ -8,3 +8,6 @@ SQLAlchemy~=2.0.25
 motor~=3.3.2
 
 sqlmodel~=0.0.14
+
+plotly~=5.18.0
+requests~=2.31.0
